kubernetes/applications/media/hyperhdr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperhdr

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: hyperhdr

  template:
    metadata:
      labels:
        app.kubernetes.io/name: hyperhdr
        app.kubernetes.io/part-of: media-stack

    spec:
      containers:
        - name: hyperhdr
          image: thomy90/hyperhdr:21.0.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8090
              protocol: TCP

            - name: flatbuffers
              containerPort: 19400
              protocol: TCP

            - name: json
              containerPort: 19444
              protocol: TCP

          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 3

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 3

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: "2"
              memory: 2Gi

          volumeMounts:
            - name: config
              mountPath: /root/.hyperhdr

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: hyperhdr-config
