kubernetes/applications/media/hyperhdr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperhdr

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: hyperhdr

  ports:
    - name: http
      appProtocol: kubernetes.io/ws
      port: 8090
      targetPort: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: hyperhdr-streaming
  annotations:
    lbipam.cilium.io/ips: "192.168.12.104"

spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false

  selector:
    app.kubernetes.io/name: hyperhdr

  ports:
    - name: http
      port: 8090
      targetPort: http
      protocol: TCP

    - name: flatbuffers
      port: 19400
      targetPort: flatbuffers
      protocol: TCP

    - name: json
      port: 19444
      targetPort: json
      protocol: TCP
